force-app/main/default/objects/Community_Episode__c/Community_Episode__c.object-meta.xml
<CustomObject>
    <label>Community Episode</label>
    <nameField>
        <label>Community Episode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Episodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>