force-app/main/default/objects/Community_Episode__c/fields/Admission_Discharge__c.field-meta.xml
<CustomField>
    <fullName>Admission_Discharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admission\Discharge</label>
    <referenceTo>Admission_Discharge__c</referenceTo>
    <relationshipLabel>Community Episodes</relationshipLabel>
    <relationshipName>Community_Episodes</relationshipName>
    <type>Lookup</type>
</CustomField>