force-app/main/default/objects/Community_Episode__c/fields/Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Call_Outcome__c</fullName>
    <label>Call Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left Voicemail</fullName>
            </value>
            <value>
                <fullName>Unable to Leave Voicemail</fullName>
            </value>
            <value>
                <fullName>Requested Call Back</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
            <value>
                <fullName>Agreed to Services</fullName>
            </value>
            <value>
                <fullName>Refused Services</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Unable to Service Patient</fullName>
            </value>
            <value>
                <fullName>Unable To Reach</fullName>
            </value>
            <value>
                <fullName>Readmitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>