force-app/main/default/objects/Community_Episode__c/fields/Community_Insurance_Verification__c.field-meta.xml
<CustomField>
    <fullName>Community_Insurance_Verification__c</fullName>
    <formula>if(
or(
Patient__r.Latest_Payer_Verification_Scenario__c = &quot;Straight Medicare B&quot;,
Patient__r.Latest_Payer_Verification_Scenario__c = &quot;Has Medicare Advantage&quot;
),
true,
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community Insurance Verification</label>
    <type>Checkbox</type>
</CustomField>