force-app/main/default/objects/Community_Episode__c/fields/Community_Status__c.field-meta.xml
<CustomField>
    <fullName>Community_Status__c</fullName>
    <label>Community Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Working</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Unable To Reach</fullName>
            </value>
            <value>
                <fullName>Unable To Service</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>