force-app/main/default/objects/Community_Episode__c/fields/Community_Status_Updated_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Community_Status_Updated_Date_Time__c</fullName>
    <label>Community Status Updated Date Time</label>
    <type>DateTime</type>
</CustomField>