force-app/main/default/objects/Community_Episode__c/fields/Count_of_Calls_Within_48_Hours__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Calls_Within_48_Hours__c</fullName>
    <label>Count of Calls Within 48 Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>