force-app/main/default/objects/Community_Episode__c/fields/Discharged_Home__c.field-meta.xml
<CustomField>
    <fullName>Discharged_Home__c</fullName>
    <formula>Admission_Discharge__r.Discharged_Home__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discharged Home</label>
    <type>Checkbox</type>
</CustomField>