force-app/main/default/objects/Community_Episode__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>Community Episodes</relationshipLabel>
    <relationshipName>Community_Episodes</relationshipName>
    <type>Lookup</type>
</CustomField>