force-app/main/default/objects/Community_Episode__c/fields/Facility_State__c.field-meta.xml
<CustomField>
    <fullName>Facility_State__c</fullName>
    <formula>text(Facility__r.Address__StateCode__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility State</label>
    <type>Text</type>
</CustomField>