force-app/main/default/objects/Community_Episode__c/fields/Latest_Discharge_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Discharge_Date__c</fullName>
    <formula>datevalue( Admission_Discharge__r.Census_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Discharge Date</label>
    <type>Date</type>
</CustomField>