force-app/main/default/objects/Community_Episode__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Community Episodes</relationshipLabel>
    <relationshipName>Community_Episodes</relationshipName>
    <type>Lookup</type>
</CustomField>