force-app/main/default/objects/Community_Episode__c/fields/Referral_Note__c.field-meta.xml
<CustomField>
    <fullName>Referral_Note__c</fullName>
    <label>Referral Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>