force-app/main/default/objects/Community_Episode__c/fields/TCM_Eligible__c.field-meta.xml
<CustomField>
    <fullName>TCM_Eligible__c</fullName>
    <formula>if(
or(today() &lt;= Latest_Discharge_Date__c + 2,
Count_of_Calls_Within_48_Hours__c &gt;= 2,
contains(text(Service_Type__c), &quot;Transitional care management&quot;)),
true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TCM Eligible</label>
    <type>Checkbox</type>
</CustomField>